syntax = "proto3";
package IMNut;

option go_package = "IMNut";
option java_package = "com.nut.im.core";

import "auxiliary.proto";

enum MsgType {
    Text = 0;
    Picture = 1;
    Voice = 2;
    Redpacket = 3;
    Auxiliary = 4; // not
    File = 5;
}

message Msg {
    string conversationId = 1;
    string cid = 2;
    MsgType type = 5;
    bytes blob  = 6;
    bytes blobExtra = 7;
    int64 jetTs = 10;
    int64 ackTs = 11;
    int64 id = 12;
}

message MsgAck {
    string conversationId = 1;
    int64 id = 2;
    int64 jetTs = 10;
    int64 ackTs = 11;
}

message MsgRead {
    string conversationId = 1;
    int64 id = 2;
    string cid = 3; //
}

message MsgList {
    bool direct = 1;
    bool finished = 2;
    string convId = 3;
    int64 lastId = 4;
    int32 limit = 5;
    repeated Msg msgs = 6;
}

message Image {
    string localPath = 1;
    string cachePath = 2;
    string filename = 3;
    string imgUrl = 4;
    string width = 5;
    string height = 6;
}

message AuxiliaryMsg {
    AuxiliaryType type = 1;
    bytes blob = 2;
}

message FileBean {
    string localPath = 1;
    string name = 2;
    string url = 3;
    string mediaType = 4;
    string md5 = 5;
    int64 size = 6;
}